--- a/argocd-applications/kfserving.yaml
+++ b/argocd-applications/kfserving.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/kubeflow-onprem/ArgoFlow
+    repoURL: https://github.com/jtfogarty/ArgoFlow
     targetRevision: HEAD
     path: kubeflow/kfserving
     kustomize:
