--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -19,7 +19,9 @@ resources:
 - argocd-applications/pod-defaults.yaml
 - argocd-applications/jupyter-web-app.yaml
 - argocd-applications/notebook-controller.yaml
-- argocd-applications/profile-controller_access-management.yaml
+#- argocd-applications/profile-controller_access-management.yaml
+- argocd-applications/experimental-pvcviewer-controller.yaml
+- argocd-applications/experimental-volumes-web-app.yaml
 - argocd-applications/tensorboard-controller.yaml
 - argocd-applications/tensorboards-web-app.yaml
 - argocd-applications/volumes-web-app.yaml
