--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -11,9 +11,9 @@ resources:
 - argocd-applications/istio.yaml
 - argocd-applications/oidc-authservice.yaml
 - argocd-applications/dex-istio.yaml
-- argocd-applications/knative.yaml
+#- argocd-applications/knative.yaml
 - argocd-applications/pipelines.yaml
-- argocd-applications/kfserving.yaml
+#- argocd-applications/kfserving.yaml
 - argocd-applications/katib.yaml
 - argocd-applications/central-dashboard.yaml
 - argocd-applications/pod-defaults.yaml
